# guitar-price-tracker

./: .env.example  .gitignore  LICENSE  docker-compose.yml  main.py  pyproject.toml
config/: guitar_models.yaml
src/guitar_offers_tracker/: __init__.py
src/guitar_offers_tracker/ingestion/: reverb.py
src/guitar_offers_tracker/models/: listing.py
src/guitar_price_tracker/db/: repository.py
src/guitar_price_tracker/db/migrations/: 001_initial.sql  002_add_model_matching.sql  002_add_model_matching_columns.sql
src/guitar_price_tracker/ingestion/: reverb.py
src/guitar_price_tracker/matching/: keywords.py
src/guitar_price_tracker/models/: listing.py
tests/: test_reverb.py
tests/fixtures/: reverb_listing.json
